--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ ul {
 
 #btnreset {
 	text-align: center;
-	background-color: orange;
+	background-color: green;
 	width:30%;
 	border-radius: 10px;
 }
